--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.11.97",
     "codecov": "^3.8.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
